[service] add guard for servers; [view] fixed text alignment for error page

--- a/src/app/error-page/error-page.component.scss
+++ b/src/app/error-page/error-page.component.scss
@@ -78,6 +78,7 @@
 .back {
   font-size: 20px;
   letter-spacing: normal;
+  text-align: center;
 
   & span {
     color: #b2b2b2;
