--- a/src/app/shared/components/create-server/create-server.component.scss
+++ b/src/app/shared/components/create-server/create-server.component.scss
@@ -16,11 +16,11 @@
   transform: translate(-50%, -50%);
   background: #fff;
   border-radius: 4px;
+  height: 400px;
 }
 
 .header {
   padding: 24px 16px 15px 16px;
-  height: 100%;
 
   & .title {
     text-align: center;
